# mergeSTP

./: CGALUtilities.h  CGAL_id.h  CMakeLists.txt  FindOpenCASCADE.cmake  InteriorVolumes-inl.h  LoadSTL.h  PointFacetDistance-inl.h  ShellMapper.h  ShellMapper_disoriented.h  main.cpp
utility/: CMakeLists.txt  Log.cpp  Log.h  Map.h  Pointer.h  Polynomial-inl.h  Polynomial.h  RLEOperations-inl.h  RLEOperations.h  RationalFunction-inl.h  RationalFunction.h  STLOutput.h  StreamFromString.h  StreamTee.cpp  StreamTee.h  TimeWrapper.cpp  TimeWrapper.h  VectorMatrix-inl.h  VectorMatrix.h  VectorMatrix2-inl.h  VectorMatrix2.h  WriteSomeRLE.h  XMLExtras.h  geometry-inl.h  geometry.h  geometry2-inl.h  geometry2.h
utility/tests/: CMakeLists.txt  testGeometry.cpp  testPolynomial.cpp  testRLEOperations.cpp  testRationalFunction.cpp
